# abortion-legislation-analysis

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Final-Report.ipynb  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
legislation_analysis/: __main__.py
legislation_analysis/api/: congress.py  scotus.py  service.py
legislation_analysis/clustering/: abstract_clustering.py  base_clustering.py  hierarchy_complete.py  hierarchy_ward.py  k_means.py  kmeans.py  knn.py  service.py
legislation_analysis/network_analysis/: network.py  service.py
legislation_analysis/processing/: clean.py  ner.py  pos_tag.py  pos_tagger.py  service.py  tokenize.py  tokenizer.py
legislation_analysis/topic_modeling/: abstract_topic_modeling.py  dynamic_topic_modeling.py  service.py  static_topic_modeling.py  topic_modeling.py
legislation_analysis/utils/: constants.py  functions.py
legislation_analysis/utils/classes/: visualizer.py
