[tool.poetry]
name = "legislation_analysis"
version = "0.1.0"
description = "This project aims to analyze the evolution of abortion discourse in U.S. legislation, particularly between the landmark Roe v. Wade (1973) and Dobbs v. Jackson (2022) decisions."
authors = ["chanteriam", "michplunkett"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pytest = "^7.3.1"
responses = "^0.23.1"
pre-commit = "^3.4.0"
bs4 = "^0.0.2"
numpy = "^1.26.3"
pandas = "^2.2.0"
pypdf2 = "^3.0.1"
nltk = "^3.8.1"
gensim = "^4.3.2"
torch = "^2.2.0"
sent2vec = "^0.3.0"
scikit-learn = "^1.4.1.post1"
sentence-transformers = "^2.3.1"
datasets = "^2.17.0"
tqdm = "^4.66.2"
huggingface-hub = "^0.20.3"
spacy-transformers = "^1.3.4"
flair = "^0.13.1"
spacy = "^3.7.4"
matplotlib = "^3.8.3"
pyarrow = "^15.0.0"
swig = "^4.2.0.post0"
jupyter = "^1.0.0"
kneed = "^0.8.5"
babe = "^0.0.7"
names-dataset = "^3.1.0"
pyldavis = "^3.4.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
